<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Proyecto Inmobiliaria</string>
    <string name="nav_header_subtitle">federicodg80@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="contratos">Contratos</string>
    <string name="salir">Salir</string>
</resources>